[package]
name = "core_storm"
version = "0.1.0"
authors = ["solmann <DanGSun@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
bincode = "1.2.1"
twox-hash = "1.5.0"
crossbeam-channel = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }